--- a/solidithai-api/package.json
+++ b/solidithai-api/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.1.2",
+    "helmet": "^8.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
