--- a/solidithai-web/tsconfig.app.json
+++ b/solidithai-web/tsconfig.app.json
@@ -20,7 +20,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "pretty": true,
+    "strictNullChecks": true,
+    "noImplicitAny": false
   },
   "include": ["src"]
 }
