--- a/solidithai-web/tsconfig.node.json
+++ b/solidithai-web/tsconfig.node.json
@@ -18,7 +18,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+
+    "pretty": true,
+    "strictNullChecks": true,
+    "noImplicitAny": false
   },
   "include": ["vite.config.ts"]
 }
