--- a/solidithai-web/package.json
+++ b/solidithai-web/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
